// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAllEnvironments fetches all environments 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
      "error",
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "environments": Object {
        "terms": Object {
          "field": "service.environment",
          "missing": undefined,
          "size": 50,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "test",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`getAllEnvironments fetches all environments with includeMissing 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
      "error",
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "environments": Object {
        "terms": Object {
          "field": "service.environment",
          "missing": "ENVIRONMENT_NOT_DEFINED",
          "size": 50,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "test",
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
